[package]
name = "scaff"
version = "0.1.0"
authors = ["Ashikur Rahman <ashikurrahman020995@gmail.com>"]
edition = "2021"

[dependencies]
axum = "0.7.9"
serde = { version = "1.0.216", features = ["derive"] }
tokio = { version = "1.42.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["fs"] }
